# supplier_agent

./: .env.example  .gitignore  README.md  ai_processor.py  data_validator.py  database_connector.py  logger_config.py  main.py  package-lock.json  package.json  pyproject.toml  snowflake_connector.py  start_servers.sh  web_scraper.py
backend/: main.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.jsx
